apps/minio-event-bridge/.k8s/authorization-policy-kafka-broker.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-event-bridge-to-kafka-broker
  namespace: rag-pipeline-workshop
  labels:
    app.kubernetes.io/instance: minio-event-bridge
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["POST", "GET"]
        hosts: ["kafka-broker-ingress.knative-eventing.svc.cluster.local"]
  selector:
    matchLabels:
      app: minio-event-bridge
