apps/minio-event-bridge/.k8s/authorization-policy-trigger.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-knative-eventing-to-trigger
  namespace: rag-pipeline-workshop
  labels:
    app.kubernetes.io/instance: s3-event-handler
spec:
  selector:
    matchLabels:
      serving.knative.dev/service: kfp-s3-trigger
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["knative-eventing"]
    to:
    - operation:
        methods: ["POST", "GET"]
        paths: ["/*"]
